--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation libs.androidx.constraintlayout
     implementation libs.androidx.legacy.support.v4
     implementation libs.androidx.fragment.ktx
+
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
@@ -81,5 +82,8 @@ dependencies {
 
     //Map
     implementation libs.play.services.maps
+
+    //Location Service
+    implementation libs.play.services.location
 
 }
