--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ coroutines = "1.8.0"
 room = "2.6.1"
 legacySupportV4 = "1.0.0"
 fragmentKtx = "1.5.6"
+playServicesLocation = "21.2.0"
 
 
 
@@ -52,6 +53,7 @@ room-compiler = { group = "androidx.room", name = "room-compiler", version.ref =
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "googleMaps" }
 androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 
 
 [plugins]
